kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speranskiy-backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: yurist-bot.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: speranskiy-backend-service
                port:
                  number: 7001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speranskiy-frontend-service
                port:
                  number: 90
  tls:
    - hosts:
        - yurist-bot.com
      secretName: yurist-bot-tls
